# siggen

./: .gitignore  CHANGES  CMakeLists.txt  CONFIG.FILES  CONFIG.VALUES  DAC.c  Makefile  README  README.tones  TODO  config.h  dB.c  fsynscr.c  fsynth.1  fsynth.h  mixer.c  qiproject.xml  scfio.h  sgen.1  siggen.1  siggen.c  siggen.conf.5  siggen.h  siggen.html  sigscr.c  smix.c  soundinfo.1  soundinfo.c  sweepgen.1  sweepgen.h  sweepscr.c  tones.1  tones.c  tonesgen.c  tt.c  wavfile.c
cmake/modules/: ncurses-config.cmake
doc/: scfio.doc  siggen.aft
doc/man/: smix.1  swgen.1
src/: adB.c  config.h.linux  config.h.sunos  configsubs.c  configsubs.h  fmtheaders.h  fsynth.c  generator.c  generator.h  misc.c  misc.h  mixer.h  scfio.c  scrsubs.c  sgen.c  sweepgen.c  swgen.c  sysfio.c  sysfio.h  wavsubs.c  wavsubs.h
test/: sysfio_mock.cpp  sysfio_mock.hpp  test_configsubs.cpp  test_generator.cpp  test_misc.cpp  test_sysfio.cpp
tones.eg/: Makefile  README.tones  clementine.notes  dtmf  hole_bucket.notes  ramp.c  ramp.sh  randnote.c  randnote.sh  randtone.c  randtone.sh  shepard-risset-falling.tones  shepard-risset-rising.tones  shepard-risset.c  slide.sh  tt.sh  tune.sh
tones.eg/samples/: Makefile  att.tones  bassoon.tones  bassoonp.tones  flute.tones  horn.tones  organ.tones  violin.tones
